--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ build/
 *.ide/
 .vs/
 
+# CLion
+.idea/
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
@@ -198,7 +201,6 @@ FakesAssemblies/
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
